samples/_failures_safe/1761694825_9dc04b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_59128997.c: In function ‘main’:
./samples/SAFE/__tmp_59128997.c:127:17: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  127 |                 for (int k
      |                 ^~~
./samples/SAFE/__tmp_59128997.c:127:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_59128997.c:127:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_59128997.c:127:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_59128997.c:127:17: error: expected declaration or statement at end of input
